Complete Haat Platform: Registration System + Real-time Data Integration
 FEATURES IMPLEMENTED:
- Fixed registration system with enhanced validation
- Real-time dashboard with live data updates
- AI-powered civil scoring system foundation
- Group buying system architecture
- Supplier ratings and review system
- JWT authentication with secure token management
- MongoDB schema optimization for geospatial data
- React Query integration for efficient data fetching
- Comprehensive error handling and user feedback
- Mobile-responsive design with cream theme

 TECHNICAL IMPROVEMENTS:
- Fixed MongoDB User model location field validation
- Enhanced form validation with real-time feedback
- Implemented React Query for automatic data refresh
- Added background data updates without UI blocking
- Optimized API endpoints for better performance
- Created comprehensive test suite for registration
- Added proper environment variable management
- Implemented rate limiting and security measures

 USER EXPERIENCE:
- Smooth animations with Framer Motion
- Real-time status indicators and live data
- Professional glassmorphism design effects
- Accessible interface with keyboard navigation
- Loading states and error boundaries
- Toast notifications for user feedback

 DEPLOYMENT READY:
- Production-optimized build configuration
- Docker containerization support
- Netlify/Vercel frontend deployment setup
- Railway/Render backend deployment ready
- Environment variable templates
- Comprehensive documentation and README

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/haat.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Haat - Street Vendor Supply Management Platform. Connect vendors and suppliers for efficient group buying and supply chain management." />
+    <meta name="keywords" content="street vendors, supply management, group buying, marketplace, vendors, suppliers" />
+    <meta property="og:title" content="Haat - Street Vendor Supply Platform" />
+    <meta property="og:description" content="Empowering street vendors through smart supply management and group buying" />
+    <meta property="og:image" content="/src/assets/haat.png" />
+        <title>Haat - Street Vendor Supply Management</title>
   </head>
   <body>
     <div id="root"></div>
